proyecto2/ingresses/ingress-gateway-contour.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: contour
  name: gateway2-public
  namespace: proyecto
spec:
  rules:
    - host: contour.pablomedrano.engineer
      http:
        paths:
          - backend:
              serviceName: miapp-golang-srv
              servicePort: 5000
            path: /
