proyecto2/ingresses/ingress-gateway-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: gateway1-public
  namespace: proyecto
spec:
  rules:
    - host: nginx.pablomedrano.engineer
      http:
        paths:
          - backend:
              serviceName: miapp-srv
              servicePort: 5000
            path: /
