proyecto2/ingresses/ingress-linkerd-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
  name: public-linkerd
  namespace: linkerd
spec:
  rules:
    - host: dashboard.pablomedrano.engineer
      http:
        paths:
          - backend:
              serviceName: linkerd-web
              servicePort: 8084
            path: /
